// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nodes added should add multiple nodes with unique id 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "branchParameters": undefined,
  "id": "kafka-transaction (copy 1)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add multiple nodes with unique id 2`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "branchParameters": undefined,
  "id": "kafka-transaction (copy 2)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add nodes with edges 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "branchParameters": undefined,
  "id": "newNode",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add nodes with edges 2`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "branchParameters": undefined,
  "id": "kafka-transaction (copy 1)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add single node 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "branchParameters": undefined,
  "id": "Enricher ID",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add single node with unique id 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "branchParameters": undefined,
  "id": "kafka-transaction 1",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;
